--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "core-js": "^3.38.1",
     "framer-motion": "^11.11.17",
     "joi": "^17.13.3",
+    "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
     "remark-gfm": "^4.0.0",
     "svgo": "^3.3.2",
     "web-vitals": "^2.1.4"
