--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-full-screen": "^1.1.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-skillbars": "^2.2.0",
     "remark-gfm": "^4.0.0",
     "svgo": "^3.3.2",
     "web-vitals": "^2.1.4"
