--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "body-parser": "^1.20.3",
     "core-js": "^3.38.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.21.1",
     "framer-motion": "^11.11.17",
     "joi": "^17.13.3",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-full-screen": "^1.1.1",
